cards: fix page break in print #1138

--- a/assets/css/format-print.css
+++ b/assets/css/format-print.css
@@ -176,10 +176,10 @@ mark.search {
   color: rgba(0, 0, 0, 1);
 }
 
-article {
+article:not(.card) {
   break-before: page;
 }
-#R-body-inner article:first-of-type {
+#R-body-inner article:not(.card):first-of-type {
   break-before: avoid;
 }
 
